...
            <TableRow>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="73dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:text="@string/a1"
                    android:textColor="#8E13EF"
                    android:textColorHint="#8E13EF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="73dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
                    android:text="@string/a2"
                    android:textColor="#8E13EF" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="73dp"
                    android:layout_height="80dp"
                    android:background="@color/white"
...
