<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_detail_booking_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".detailbooking.DetailBookingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto">

            <ImageView
                android:id="@+id/detail_movie_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/harry_potter_and_the_philosopher_stone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25sp">

            <TextView
                android:id="@+id/detail_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:text="@string/movie_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_movie_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movieDate"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/detail_movie_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30sp"
                android:text="@string/movieTime"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/detail_spinner_date"
                    android:layout_width="0dp"
                    android:layout_height="30sp"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/detail_spinner_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_personnel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:gravity="center"
                    android:text="@string/default_personnel"
                    android:freezesText="true"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/detail_reservation_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:padding="10sp"
                android:text="@string/reserve_complete"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
