...

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="해리 포터와 마법사의 돌"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
...
            android:textSize="14sp" />

        <TextView
            android:id="@+id/running_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="러닝타임: 152분"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/book_button"
...
